// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders LargeName without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card  on User Card  on User Card  on User Card  on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Loading without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          />
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            />
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          />
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Nickname without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-grvm4i"
            title="nicknamenickname"
          >
            (
            nicknamenickname
            )
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoActions without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          />
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoBio without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoBioAndNoLocalTime without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoBioNoLocalTimeNoRoles without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          />
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoLocalTime without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Admin
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Rocket.Chat
                </span>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1i2tyln"
            >
              <span
                class="rcx-box rcx-box--full rcx-tag "
              >
                <span
                  class="rcx-tag__inner"
                >
                  Team
                </span>
              </span>
            </div>
          </span>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        />
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoRoles without crashing 1`] = `
<body>
  <div>
    <div
      aria-label="User_card"
      class="rcx-box rcx-box--full rcx-user-card rcx-css-grbj25"
      role="dialog"
      tabindex="-1"
    >
      <div>
        <figure
          class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x124"
        >
          <img
            alt=""
            aria-hidden="true"
            class="rcx-avatar__element rcx-avatar__element--x124"
            data-username="guilherme.gazzo"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
            title="guilherme.gazzo"
          />
        </figure>
        <div
          class="rcx-box rcx-box--full rcx-css-qcr6f3"
        >
          <div
            aria-label="User_card_actions"
            aria-orientation="horizontal"
            class="rcx-button-group rcx-button-group--align-start rcx-button-group--small"
            role="toolbar"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="message"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-message rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
              title="call"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-169p7a7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-cxcu37"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-tj2lg3"
            title="guilherme.gazzo"
          >
            <svg
              class="rcx-status-bullet rcx-status-bullet--offline undefined "
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="rcx-status-bullet rcx-status-bullet--offline"
                cx="6"
                cy="6"
                r="5"
                stroke-width="2"
              />
            </svg>
            <div
              class="rcx-box rcx-box--full rcx-css-a2k85p"
            >
              guilherme.gazzo
            </div>
          </div>
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-1qys2qf"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-inline-elements rcx-css-1te28na"
          >
            <img
              alt="🛴"
              class="emojione"
              src="https://cdn.jsdelivr.net/emojione/assets/4.5/png/32/1f6f4.png"
              title=":scooter:"
            />
             currently working on User Card
          </div>
        </span>
        <div
          class="rcx-box rcx-box--full rcx-css-9vcs0o"
        >
          <span
            class="rcx-box rcx-box--full rcx-css-1vab7ss"
          />
        </div>
        <span
          class="rcx-box rcx-box--full rcx-css-188p6ed"
        >
          Local Time: 7:44 AM
        </span>
        <span
          class="rcx-box rcx-box--full rcx-css-1gegcay rcx-css-3yqr6t"
        >
          <div
            class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, eros convallis vulputate cursus, nisi neque eleifend libero, eget lacinia justo purus nec est. In at sodales ipsum. Sed lacinia quis purus eget pulvinar. Aenean eu pretium nunc, at aliquam magna. Praesent dignissim, tortor sed volutpat mattis, mauris diam pulvinar leo, porta commodo risus est non purus. Mauris in justo vel lorem ullamcorper hendrerit. Nam est metus, viverra a pellentesque vitae, ornare eget odio. Morbi tempor feugiat mattis. Morbi non felis tempor, aliquam justo sed, sagittis nibh. Mauris consequat ex metus. Praesent sodales sit amet nibh a vulputate. Integer commodo, mi vel bibendum sollicitudin, urna lectus accumsan ante, eget faucibus augue ex id neque. Aenean consectetur, orci a pellentesque mattis, tortor tellus fringilla elit, non ullamcorper risus nunc feugiat risus. Fusce sit amet nisi dapibus turpis commodo placerat. In tortor ante, vehicula sit amet augue et, imperdiet porta sem.
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;
